Version 3.2.4: Leaderboard-Tool überarbeitet